--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,5 +4,6 @@ tasks:
   build:
     cmds:
       - powershell New-Item -ItemType Directory -Force -Path ./build
+      - go test -v ./...
       - go build -o build/agent.exe ./cmd/agent
       - go build -o build/server.exe ./cmd/server
