--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,9 +1,22 @@
 version: '3'
 
 tasks:
+  default:
+    - task: build
+    - task: run
+
+  run:
+    cmds:
+      - ./build/server.exe
+      - ./build/agent.exe
+
   build:
     cmds:
       - powershell New-Item -ItemType Directory -Force -Path ./build
-      - go test -v ./...
+
       - go build -o build/agent.exe ./cmd/agent
       - go build -o build/server.exe ./cmd/server
+
+  test:
+    cmds:
+      - go test -v ./...
