--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,5 +1,8 @@
 version: '3'
 
+env:
+
+
 tasks:
   default:
     - task: build
@@ -20,3 +23,31 @@ tasks:
   test:
     cmds:
       - go test -v ./...
+
+  iter1:
+    cmds:
+     - ./metricstest.exe -test.v -test.run=^TestIteration1$$ -binary-path=cmd/server/main.exe
+  iter2:
+    cmds:
+      - ./metricstest.exe -test.v -test.run=^TestIteration2[AB]*$ -source-path=. -agent-binary-path=cmd/agent/main.exe
+  iter3:
+    cmds:
+      - ./metricstest.exe -test.v -test.run=^TestIteration3[AB]*$ -source-path=. -binary-path=cmd/server/main.exe -agent-binary-path=cmd/agent/main.exe
+#  iter4:
+#    SERVER_PORT=$(SERVER_PORT)
+#    ADDRESS="localhost:$(SERVER_PORT)"
+#    TEMP_FILE=$(TEMP_FILE)
+#    ./metricstest -test.v -test.run=^TestIteration4$ \
+#    -agent-binary-path=cmd/agent/main.exe \
+#    -binary-path=cmd/server/main.exe \
+#    -server-port=$(SERVER_PORT) \
+#    -source-path=.
+#  iter5:
+#    SERVER_PORT=$(SERVER_PORT)
+#    ADDRESS="localhost:$(SERVER_PORT)"
+#    TEMP_FILE=$(TEMP_FILE)
+#    ./metricstest -test.v -test.run=^TestIteration5$ \
+#    -agent-binary-path=cmd/agent/main.exe \
+#    -binary-path=cmd/server/main.exe \
+#    -server-port=$(SERVER_PORT) \
+#    -source-path=.
