--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,12 +1,19 @@
 version: '3'
 
 env:
-
+  SERVER_PORT: 8080
 
 tasks:
   default:
-    - task: build
-    - task: run
+    - task: buildForTest
+    - task: test
+    - task: iter1
+    - task: iter2
+    - task: iter3
+    - task: iter4
+    - task: iter5
+    - task: iter6
+    - task: iter7
 
   run:
     cmds:
@@ -20,6 +27,11 @@ tasks:
       - go build -o build/agent.exe ./cmd/agent
       - go build -o build/server.exe ./cmd/server
 
+  buildForTest:
+    cmds:
+      - go build -o cmd/agent/agent.exe ./cmd/agent
+      - go build -o cmd/server/server.exe ./cmd/server
+
   test:
     cmds:
       - go test -v ./...
@@ -27,27 +39,27 @@ tasks:
   iter1:
     cmds:
      - ./metricstest.exe -test.v -test.run=^TestIteration1$$ -binary-path=cmd/server/main.exe
+
   iter2:
     cmds:
       - ./metricstest.exe -test.v -test.run=^TestIteration2[AB]*$ -source-path=. -agent-binary-path=cmd/agent/main.exe
+
   iter3:
     cmds:
       - ./metricstest.exe -test.v -test.run=^TestIteration3[AB]*$ -source-path=. -binary-path=cmd/server/main.exe -agent-binary-path=cmd/agent/main.exe
-#  iter4:
-#    SERVER_PORT=$(SERVER_PORT)
-#    ADDRESS="localhost:$(SERVER_PORT)"
-#    TEMP_FILE=$(TEMP_FILE)
-#    ./metricstest -test.v -test.run=^TestIteration4$ \
-#    -agent-binary-path=cmd/agent/main.exe \
-#    -binary-path=cmd/server/main.exe \
-#    -server-port=$(SERVER_PORT) \
-#    -source-path=.
-#  iter5:
-#    SERVER_PORT=$(SERVER_PORT)
-#    ADDRESS="localhost:$(SERVER_PORT)"
-#    TEMP_FILE=$(TEMP_FILE)
-#    ./metricstest -test.v -test.run=^TestIteration5$ \
-#    -agent-binary-path=cmd/agent/main.exe \
-#    -binary-path=cmd/server/main.exe \
-#    -server-port=$(SERVER_PORT) \
-#    -source-path=.
+
+  iter4:
+    cmds:
+      - ./metricstest -test.v -test.run=^TestIteration4$ -agent-binary-path=cmd/agent/main.exe -binary-path=cmd/server/main.exe -server-port=$SERVER_PORT-source-path=.
+
+  iter5:
+    cmds:
+      - ./metricstest -test.v -test.run=^TestIteration5$ -agent-binary-path=cmd/agent/main.exe -binary-path=cmd/server/main.exe -server-port=$SERVER_PORT -source-path=.
+
+  iter6:
+    cmds:
+      - ./metricstest -test.v -test.run=^TestIteration6$ -agent-binary-path=cmd/agent/agent -binary-path=cmd/server/server -server-port=$SERVER_PORT -source-path=.
+
+  iter7:
+    cmds:
+      - ./metricstest -test.v -test.run=^TestIteration7$ -agent-binary-path=cmd/agent/agent -binary-path=cmd/server/server -server-port=$SERVER_PORT -source-path=.
