update server and agent: available to use encode body in request.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -63,3 +63,7 @@ tasks:
   iter7:
     cmds:
       - ./metricstest -test.v -test.run=^TestIteration7$ -agent-binary-path=cmd/agent/agent -binary-path=cmd/server/server -server-port=$SERVER_PORT -source-path=.
+
+  iter8:
+    cmds:
+      - metricstest -test.v -test.run=^TestIteration8$ -agent-binary-path=cmd/agent/agent -binary-path=cmd/server/server -server-port=$SERVER_PORT -source-path=.
