--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,7 +2,7 @@ version: '3'
 
 env:
   SERVER_PORT: 8080
-
+  TEMP_FILE: {{.USER_WORKING_DIR}}/tmp/metrics-db.json
 tasks:
   default:
     - task: buildForTest
@@ -67,3 +67,7 @@ tasks:
   iter8:
     cmds:
       - metricstest -test.v -test.run=^TestIteration8$ -agent-binary-path=cmd/agent/agent -binary-path=cmd/server/server -server-port=$SERVER_PORT -source-path=.
+
+  iter9:
+    cmds:
+      - metricstest -test.v -test.run=^TestIteration9$ -agent-binary-path=cmd/agent/agent -binary-path=cmd/server/server -file-storage-path=$TEMP_FILE -server-port=$SERVER_PORT -source-path=.
