--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,8 +1,7 @@
 version: '3'
 
-env:
-  SERVER_PORT: 8080
-  TEMP_FILE: {{.USER_WORKING_DIR}}/tmp/metrics-db.json
+
+
 tasks:
   default:
     - task: buildForTest
@@ -14,6 +13,9 @@ tasks:
     - task: iter5
     - task: iter6
     - task: iter7
+    - task: iter8
+    - task: iter9
+    - task: iter10
 
   run:
     cmds:
@@ -71,3 +73,7 @@ tasks:
   iter9:
     cmds:
       - metricstest -test.v -test.run=^TestIteration9$ -agent-binary-path=cmd/agent/agent -binary-path=cmd/server/server -file-storage-path=$TEMP_FILE -server-port=$SERVER_PORT -source-path=.
+
+  iter10:
+    cmds:
+      - ./metricstest -test.v -test.run=^TestIteration10[AB]$ -agent-binary-path=cmd/agent/agent -binary-path=cmd/server/server -database-dsn=$DATABASE_DSN -server-port=$SERVER_PORT -source-path=.
