--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -17,15 +17,17 @@ tasks:
     - task: iter9
     - task: iter10
 
-  run:
+  runServer:
     cmds:
       - ./build/server.exe
+
+  runAgent:
+    cmds:
       - ./build/agent.exe
 
   build:
     cmds:
       - powershell New-Item -ItemType Directory -Force -Path ./build
-
       - go build -o build/agent.exe ./cmd/agent
       - go build -o build/server.exe ./cmd/server
 
